# language-persistence

./: .gitignore  Cargo.toml  README.md  adapter.ts  config.ts  dna.js  index.ts  languageAdapter.ts  package-lock.json  package.json  putAdapter.ts  rollup.config.js
hc-dna/: Cargo.toml
hc-dna/tests/: package-lock.json  package.json
hc-dna/tests/src/: index.ts
hc-dna/zomes/anchored-expression/: Cargo.toml
hc-dna/zomes/anchored-expression/src/: lib.rs
tests/: package-lock.json  package.json
workdir/: dna.yaml
zomes/anchored-expression/: Cargo.toml
