[package]
name = "anchored-expression"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "anchored_expression"

[dependencies]
derive_more = "0"
serde = "1"

hdk = "0.0.100"
holo_hash = "0.0.2-alpha.1"
hc_utils = { git = "https://github.com/holochain/hc-utils", branch = "develop" }
