[package]
name = "anchored-expression"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "anchored_expression"

[dependencies]
derive_more = "0"
serde = "1"

hdk = { git = "https://github.com/holochain/holochain", rev = "a6ac0439670ba367c723a80d3b8bc7c419aa5f6e" }
holo_hash = { git = "https://github.com/holochain/holochain", rev = "a6ac0439670ba367c723a80d3b8bc7c419aa5f6e" }
