[package]
name = "anchored-expression"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "anchored_expression"

[dependencies]
derive_more = "0"
serde = "1"
chrono = { version = "0.4", features = ["serde"] }

hdk = "0.0.104"
holo_hash = "0.0.5"
